--- a/assets/main.scss
+++ b/assets/main.scss
@@ -9,20 +9,20 @@ body {
   margin: 0;
 }
 
-h2{
-   text-align: center;
+h2 {
+  text-align: center;
 }
 
 .nav {
   margin: 0;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 5px 100px;
   color: #fff;
-  background-color: rgb(171, 218, 86);
-//   position: fixed;
-//   bottom: 1;
+  position: absolute;
+  //   bottom: 1;
   &-item {
     display: flex;
     justify-content: space-evenly;
@@ -36,14 +36,29 @@ h2{
 
   a {
     text-decoration: none;
-  }
 
-  input{
-    border: 2px solid #ccc;
-    border-radius: 20px;
+    &:visited {
+      color: #fff;
+    }
   }
 }
 
+.res {
+  &-head {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+    h1 {
+      color: black;
+      text-shadow: none;
+      font-size: 35px;
+      text-align: center;
+      padding: 10px;
+      margin: 20px;
+    }
+  }
+}
 
 .col {
   &-2 {
@@ -96,41 +111,92 @@ h2{
       background-size: cover;
       position: relative;
       box-shadow: 2px 6px 6px 0 rgb(215, 215, 215);
-      
+
       .iteminfo {
         background: white;
         width: 100%;
         height: 30%;
-        margin:0;
-      padding: 0;
+        margin: 0;
+        padding: 0;
         position: absolute;
         bottom: 0;
         display: flex;
         justify-content: space-evenly;
         align-items: center;
 
-        .item{
-            margin: 0;
-            padding: 10px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
-            h4,p{
-                margin: 5px;
-            }
+        .item {
+          margin: 0;
+          padding: 10px;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-evenly;
+          h4,
+          p {
+            margin: 5px;
+          }
         }
 
-        .price{
-
+        .price {
         }
       }
-    }  
+    }
   }
 }
 
-.row{
-    display: flex;
-    justify-content: space-evenly;
+.row {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.container {
+  width: 800px;
+  margin: 100px auto;
+  display: grid;
+  grid-template-columns: 300px 1fr;
+  grid-template-rows: 300px 1fr;
+  grid-column-gap: 60px;
+  grid-row-gap: 60px;
+  line-height: 2;
+
+  .image {
+    grid-area: 1 / 1 / 2 / 2;
+    background-size: cover;
+  }
+  .details {
+    grid-area: 1 / 2 / 2 / 3;
+    position: relative;
+
+    fieldset {
+      legend {
+        padding: 0 10px;
+      }
+      width: 50%;
+      border: 4px solid #ccc;
+      border-radius: 15px;
+    }
+  }
+  .options {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+}
+
+.cart {
+  padding: 100px;
+  max-width: 1000px;
+  margin: 0 auto;
+
+  h2 {
+    text-align: center;
+  }
+
+  .total {
+    font-weight: bold;
+  }
+
+  .emptycart {
+    text-align: center;
+    line-height: 2;
+  }
 }
 
 .d-btn {
@@ -195,8 +261,53 @@ h2{
   }
 }
 
-footer{
-//   position: fixed;
+.inpt {
+  border: 2px solid #ccc;
+  border-radius: 20px;
+  width: 50px;
+  height: 25px;
+  text-align: center;
+  &:hover {
+    border: 2px solid #409eff;
+  }
+}
+
+
+table {
+  border: 1px solid #ccc;
+  border-collapse: collapse;
+  margin: 40px 0;
+  padding: 0;
+  width: 100%;
+  table-layout: fixed;
+  border-radius: 5px;
+
+  caption {
+    font-size: 1.5em;
+    margin: 0.5em 0 0.75em;
+  }
+
+  tr {
+    background-color: #f8f8f8;
+    border: 1px solid #ddd;
+    padding: 0.35em;
+  }
+
+  th,
+  td {
+    padding: 0.625em;
+    text-align: center;
+  }
+
+  th {
+    font-size: 0.85em;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+  }
+}
+
+footer {
+  //   position: fixed;
   text-align: center;
   bottom: 0;
   width: 100%;
@@ -205,4 +316,3 @@ footer{
   color: rgb(168, 168, 168);
   background-color: #fff;
 }
-
